--- a/server/composer.json
+++ b/server/composer.json
@@ -2,11 +2,16 @@
     "require": {
         "silex/silex": "1.0.*",
         "symfony/twig-bridge": "2.1.*",
+        "symfony/security": "~2.3",
+         "doctrine/dbal": "~2.2",
+        "symfony/twig-bridge": "~2.1",
+        "jasongrimes/silex-simpleuser": "~0.6.3",
+         "monolog/monolog": ">=1.0.0",
         "bshaffer/oauth2-server-php": "v0.5",
         "bshaffer/oauth2-server-httpfoundation-bridge": "v0.5"
     },
     "autoload" : {
-        "psr-0": { "Ctauth" : "src/", "Demo" : "src/"}
+        "psr-0": { "Ctauth" : "src/", "Ctprofile" : "src/"}
     },
     "minimum-stability": "dev"
 }
