--- a/server/composer.json
+++ b/server/composer.json
@@ -1,10 +1,9 @@
 {
     "require": {
         "silex/silex": "1.0.*",
-        "symfony/twig-bridge": "2.1.*",
-        "symfony/security": "~2.3",
-         "doctrine/dbal": "~2.2",
-        "symfony/twig-bridge": "~2.1",
+        "symfony/twig-bridge": ">=2.1.0",
+        "symfony/security": ">=2.3",
+         "doctrine/dbal": ">=2.2.0",
         "swiftmailer/swiftmailer": ">=4.1.2",
          "monolog/monolog": ">=1.0.0",
         "bshaffer/oauth2-server-php": "v0.5",
