--- a/server/composer.json
+++ b/server/composer.json
@@ -3,6 +3,9 @@
         "silex/silex": "1.0.*",
         "symfony/twig-bridge": ">=2.1.0",
         "symfony/security": ">=2.3",
+        "symfony/browser-kit": ">=2.3,<2.4-dev",
+        "phpunit/phpunit": "3.7.*",
+        "symfony/css-selector":">=2.2",
          "doctrine/dbal": ">=2.2.0",
         "swiftmailer/swiftmailer": ">=4.1.2",
          "monolog/monolog": ">=1.0.0",
