--- a/server/composer.json
+++ b/server/composer.json
@@ -1,8 +1,8 @@
 {
     "require": {
-        "silex/silex": "1.0.*",
-        "symfony/twig-bridge": ">=2.1.0",
-        "symfony/security": ">=2.3",
+        "silex/silex": "1.*",
+        "symfony/twig-bridge": "2.1.*",
+        "symfony/security": "2.3.*",
         "symfony/browser-kit": ">=2.3,<2.4-dev",
         "phpunit/phpunit": "3.7.*",
         "symfony/css-selector":">=2.2",
