access token lifetime set to one year by default (to avoid any refresh problems)

--- a/server/data/parameters.json.dist
+++ b/server/data/parameters.json.dist
@@ -13,5 +13,8 @@
         "host" : "localhost",
         "username" : "root",
         "password" : "c0rt3xt"
-    }
+    },
+  "oauth": {
+    "access_lifetime": 31536000
+  }
 }
