New parameter for url manager

--- a/server/data/parameters.json.dist
+++ b/server/data/parameters.json.dist
@@ -24,5 +24,6 @@
       "password"   : "",
       "encryption" : "",
       "auth_mode"  : ""
-    }
+    },
+    "manager" : "http://managerv2.cortext.net"
 }
