--- a/server/composer.json
+++ b/server/composer.json
@@ -1,19 +1,27 @@
 {
     "require": {
-        "silex/silex": "1.*",
-        "symfony/twig-bridge": "2.1.*",
-        "symfony/security": "2.3.*",
-        "symfony/browser-kit": ">=2.3,<2.4-dev",
-        "phpunit/phpunit": "3.7.*",
-        "symfony/css-selector":">=2.2",
-         "doctrine/dbal": ">=2.2.0",
-        "swiftmailer/swiftmailer": ">=4.1.2",
-         "monolog/monolog": ">=1.0.0",
+        "silex/silex": "~1.2.3",
+        "symfony/twig-bridge": "~2.3.28",
+        "symfony/security": "~2.3.28",
+        "symfony/browser-kit": "~2.3.28",
+        "symfony/css-selector":"~2.3.28",
+        "symfony/debug":"~2.3.28",
+        "symfony/dom-crawler":"~2.3.28",
+        "symfony/event-dispatcher":"~2.3.28",
+        "symfony/http-foundation":"~2.3.28",
+        "symfony/http-kernel":"~2.3.28",
+        "symfony/routing":"~2.3.28",
+        "symfony/yaml":"~2.3.28",
+        "doctrine/dbal": "~2.5.1",
+        "swiftmailer/swiftmailer": "~4.1.2",
+        "monolog/monolog": "~1.13.1",
         "bshaffer/oauth2-server-php": "v0.5",
         "bshaffer/oauth2-server-httpfoundation-bridge": "v0.5"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~3.7.0"
+    },
     "autoload" : {
         "psr-0": { "Ctauth" : "src/", "Ctprofile" : "src/", "SimpleUser" : "vendor/cortext/silex-simpleuser/src/"}
-    },
-    "minimum-stability": "dev"
+    }
 }
