--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ web/bundles/*
 
 # Configuration files
 /examples/
-/server/log/
+/server/log
 /server/log/*
 /server/config/config.php
 /server/data/*
