send register mail to all admins - see https://app.asana.com/0/19990243069984/106858864631009

--- a/server/data/parameters.json.dist
+++ b/server/data/parameters.json.dist
@@ -25,5 +25,7 @@
       "encryption" : "",
       "auth_mode"  : ""
     },
-    "manager" : "http://managerv2.cortext.net"
+    "manager" : "http://managerv2.cortext.net",
+    "admin" : "webmaster@cortext.fr",
+    "adminList" : "coeur@cortext.fr"
 }
