--- a/server/views/cgu.twig.dist
+++ b/server/views/cgu.twig.dist
@@ -1,11 +1,13 @@
 {% extends layout_template  %}
 
-{% block title %}Cortext Manager Terms{% endblock %}
+{% block title %}Conditions Générales d'Utilisation{% endblock %}
 
 {% block content %}
   <div class="media border-media">
     <div class="page-header">
-      <h2 class="info-sign">Cortext Manager Terms of use</h2>
+      <h2 class="info-sign">{{ block('title') }}</h2>
+
+      <p><a href="{{ path('conditions') }}">Conditions Générales d'Utilisation détaillées</a></p>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean volutpat magna a nisi laoreet, nec aliquet nulla dapibus. Suspendisse varius egestas fermentum. Curabitur a commodo eros. Ut porttitor varius consequat. Suspendisse vitae lobortis lectus. Etiam lacus metus, sollicitudin quis lacinia non, dapibus eu mauris. Nulla aliquet, ante quis luctus rhoncus, ante erat egestas risus, quis aliquam quam leo nec neque. Nulla at lectus leo. Nunc blandit, velit non bibendum lobortis, diam ex faucibus est, at suscipit risus diam sed dui. Nulla vestibulum lacinia massa ac porta.</p>
 
